bynkc/tests/fixtures/positive/157_state_nonzero_default/src/retry.bynk
context retry

agent Task {
  key id: String

  state {
    retries: Int = 3,
    done:    Bool,
  }

  on call peek() -> Effect[Result[(), String]] {
    Ok(())
  }
}
