bynkc/tests/fixtures/negative/253_held_unsupported_storage/src/room.bynk
context room
type ServerFrame = { text: String }
agent Room {
  key id: String
  store conns: Set[Connection[ServerFrame]]
  on call ping() -> Effect[()] {
    self
  }
}
